# AMA

./: .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  upload-project.sh
backend/: .dockerignore  .env.example  config.py  jobs.py  main.py  pyproject.toml  storage.py
backend/pipeline/: assets.py  background.py  image_story.py  story.py  tts.py
backend/routes/: assets.py  camera.py  dream.py  image_nodes.py  live.py  pipeline.py  projects.py  studio.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: story_data.json
frontend/src/: App.tsx  config.ts  index.css  types.ts
frontend/src/components/pipeline/: AssetLibraryPicker.tsx  CharacterNode.tsx  DreamNode.tsx  ImageStoryNode.tsx  LiveNode.tsx  NodePanel.tsx  PageNode.tsx  PipelineStageNode.tsx  PipelineToolbar.tsx  SpriteStateNode.tsx  SpritesPanel.tsx  StoryNode.tsx  StudioPanel.tsx
frontend/src/components/theater/: BackgroundLayer.tsx  DreamSession.tsx  ImageStorySlideshow.tsx  LiveSession.tsx  NarrationPlayer.tsx  SpriteLayer.tsx  TheaterControls.tsx
frontend/src/data/: animationProfiles.ts  assetManifest.ts  storyData.ts
frontend/src/pages/: CameraLandingPage.tsx  CameraPage.tsx  CameraViewPage.tsx  PipelinePage.tsx  ProjectsPage.tsx  StoryEditorPage.tsx  TheaterPage.tsx
infra/: artifact.tf  cloudrun.tf  gcs.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf
